// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryCta renders correctly as a button 1`] = `
<div>
  <button
    aria-label="FOO"
    className="primaryCta is-dark"
  >
    <div
      className="outline outline-a"
    />
    <div
      className="outline outline-b"
    />
    <div
      className="text text-a"
    >
      FOO
    </div>
    <div
      aria-hidden="true"
      className="text text-b"
    >
      FOO
    </div>
  </button>
</div>
`;

exports[`PrimaryCta renders correctly as a link 1`] = `
<div>
  <a
    aria-label="FOO"
    className="primaryCta is-dark"
    href="http://www.rga.com/"
  >
    <div
      className="outline outline-a"
    />
    <div
      className="outline outline-b"
    />
    <div
      className="text text-a"
    >
      FOO
    </div>
    <div
      aria-hidden="true"
      className="text text-b"
    >
      FOO
    </div>
  </a>
</div>
`;
